@@ -1,4 +1,5 @@
 v0.11
+	* ADD :  special value "_NULL_" to TagSelector; matches non-existent or empty tag
 	* FIX : allow punctuation in tag selector
 	* ADD : "not", "true", "false", "[Default]" keywords to the Tag Selector; "[Default]" specifies the style for features not having a specific (i.e. non-default) style selected. Together with "Type Is", allows for "bug-fixing" styles "a la Maplint"
 	* ADD : Implementation of a binary OSM file format targeted to mobile devices (*.osb); so far, is ~3x smaller and loads ~5x faster; format subject to changes and documentation
